[package]
name = "md_to_html"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tree-sitter = "0.19.5"
tree-sitter-markdown = "0.7.1"
env_logger = "0.10"
log = "0.4"
